2002-05-05  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
	
	* Makefile.in: update my release steps
 
2002-05-05  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: ->0.3cvs

	* results/: hmm, remove /all/ the files 
 
2002-05-04  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.2
 
2002-05-04  William Cohen  <wcohen@nc.rr.com>

	* doc/oprofile.xml: add note on power management
 
2002-05-03  John Levon  <moz@compsoc.man.ac.uk>

	* doc/Makefile.in:
	* doc/xsl/xhtml-common.xsl:
	* doc/xsl/xhtml.xsl:
	* doc/xsl/xhtml-chunk.xsl: use some xsl to fix
	  some of the problems (not all :()
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_session.c: couple of improvements
 
	* dae/opd_util.c: fix warning

	* doc/oprofile.xml: some docs on op_session

	* pp/op_time.cpp: introduce -s parameter (should be
	  in all utils)
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* oprof_report/Makefile.in: disable for release
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* results/: nuke this in favour of oprofile-tests
	  module
 
2002-05-02  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* op_user.h:
	* dae/op_start: 
	* dae/op_stop: 
	* dae/opd_util.h:
	* dae/opd_util.c: 
	* dae/oprofiled.c: 
	* dae/oprofiled.h: 
	* doc/oprofile.1.in:
	* doc/oprofile.xml: 
	* gui/oprof_start.h:
	* gui/oprof_start.cpp:
 	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp:
	* gui/ui/oprof_start_base.ui: 
	* oprof_report/oprof_report.cpp: 
	* pp/op_merge.cpp: 
	* pp/op_time.cpp: 
	* pp/opf_filter.cpp: 
	* pp/oprofpp.cpp: 
	* pp/oprofpp.h: 
	* pp/oprofpp_util.cpp: remove useless command line
	  options in anticipation of the new spec
	 
	* libdb/db-manage.c: reset base_memory and fd
	  on close
 
	* dae/.cvsignore: 
	* dae/Makefile.in:
	* dae/op_session.c:
	* dae/opd_proc.c: 
	* dae/opd_proc.h:
	* dae/oprofiled.h:
	* dae/oprofiled.c: use lock file for daemon.