@@ -462,13 +462,13 @@ ssize_t opd_read_device(fd_t devfd, void *buf, size_t size, int seek)
  * move the file @old_dir/@name to @new_dir/@name iff
  * @old_dir/@name is a regular file
  *
- * if renaming succeed zero or the file is not 
- * a regular file is returned
+ * return > 0 if the file is not a regular file, == 0 if the
+ * file is successfully moved and < 0 on error
  */ 
 int opd_move_regular_file(const char *new_dir, 
 			  const char *old_dir, const char *name)
 {
-	int ret = 0;
+	int ret = 1;
 	struct stat stat_buf;
 
 	char * src = xmalloc(strlen(old_dir) + strlen(name) + 2);
